# rust-stater-server

./: .gitignore  Cargo.toml
client/: .prettierrc.json  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/Hooks/: useTasks.ts
client/src/utils/: types.ts
migrations/: 0001_books_table.sql
src/: main.rs
src/routes/: tasks.rs
src/services/: build_client.rs
