[package]
name = "Test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "macros",
] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
dotenvy = "0.15.7"
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
chrono = { version = "0.4.24", features = ["serde"] }
tracing = "0.1"
http = "1.1.0"
tracing-subscriber = "0.3"
